--- a/styles/main.css
+++ b/styles/main.css
@@ -244,7 +244,7 @@ nav div:nth-child(2){
 
 .academicsContainer{
 	width: 76%;
-	height: 1000px;
+	/*height: 1000px;*/
 	background-color: white;
 	display: inline-block;
 	border-top-left-radius: 3px;
@@ -310,7 +310,8 @@ input::-webkit-search-cancel-button {
 input[type=search] {
   border: solid 3px white;
   padding: 5px 12px 5px 20px;
-  width: 200px;
+  width: auto;
+	/*max-width: 500px;*/
   border-radius: 10em;
   -webkit-transition: .2s;
   transition: .2s;
@@ -346,3 +347,139 @@ input::-webkit-input-placeholder {
 /*.academicsControls select option{
 	text-transform: capitalize;
 }*/
+
+.academicsContent{
+	/*display: flex;
+	flex-flow: row wrap;
+	justify-content: flex-start;*/
+	text-align:center;
+	padding: 35px 0;
+	font-size: 0px;
+	position: relative;
+}
+
+.academicsContent .tile{
+	width: 240px;
+	overflow: hidden;
+	/*margin: 25px 25px;*/
+	margin: 10px;
+	display: inline-block;
+	text-align: center;
+	/*position: absolute;
+	top:0;*/
+	position: relative;
+	border-radius: 2px;
+}
+
+.tile img{
+	transition: all .3s;
+}
+
+.tile:hover img{
+	cursor: pointer;
+	-webkit-transform: scale(1.2);
+	transform: scale(1.2);
+}
+
+.tile .tileOverlay{
+	background-color: rgba(0,0,0,.5);
+	width: 240px;
+	height: 240px;
+	position: absolute;
+	top:0
+}
+
+.tile .tileTitle{
+	/*width: 240px;
+	height: 240px;*/
+	width: 100%;
+	position: absolute;
+	top: 0;
+	/*display: flex;
+	align-items: center;
+	align-content: center;
+	text-align: center;*/
+	text-align: center;
+	margin-top: 100px;
+	transition: all .2s;
+}
+
+.tile .tileTitle span{
+	color: white;
+	font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: .2px;
+  line-height: 1.4;
+	text-align: center;
+}
+
+.tileTitle .viewMore{
+	font-size: 16px;
+	color: white;
+	background-color: rgba(216,17,24,1);
+	padding: 5px 7px;
+	width: 110px;
+	margin: 10px auto;
+	border-radius: 5px;
+	opacity: 0;
+	transition: all .2s;
+}
+
+.tile:hover .tileTitle {
+	margin-top: 80px;
+}
+
+.tile:hover .tileTitle .viewMore{
+	opacity: 1;
+}
+
+.tileContent{
+	width: 100%;
+	height: 50px;
+	background-color: #efefef;
+}
+
+.threeRowContainer{
+	width: 76%;
+	/*height: 400px;*/
+	background-color: white;
+	margin-left: auto;	
+	margin-top: 50px;
+	margin-right: 1%;
+	text-align: center;
+	padding: 50px 25px;
+	box-sizing: border-box;
+	margin-bottom: 30px;
+}
+
+.threeRowContainer div{
+	width: 30%;
+	height: 200px;
+	background-color: #efefef;
+	display: inline-block;
+	margin: 0px 10px;
+	color: #d81118;
+	font-size: 18px;
+	padding-top: 20px;
+}
+
+footer{
+	background-color: #434140; 
+	width: 100%;
+	/*height: 80px;*/
+	font-size: 18px;
+	text-align: center;
+	color: rgba(255,255,255,.74);
+	padding: 30px 0 25px;
+}
+
+
+@media only screen and (max-width: 1440px) {
+	
+	input[type=search]{
+		display: none;
+	}
+
+
+}
