--- a/styles/main.css
+++ b/styles/main.css
@@ -1,48 +1,138 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 
 /*CSS Reset*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
+
 body {
-	line-height: 1.4;
+  line-height: 1.4;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 .cf:after {
@@ -52,44 +142,46 @@ table {
 }
 
 
- /*Page Helpers*/
-html, body{
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    margin: 0 auto;
-    line-height: 1.4;
-    width: 100%;
-    height: 100%;
-		background-color: #f2f2f2;
+/*Page Helpers*/
+
+html,
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  margin: 0 auto;
+  line-height: 1.4;
+  width: 100%;
+  height: 100%;
+  background-color: #f2f2f2;
 }
 
-html{
+html {
   box-sizing: border-box;
 }
 
-.boxShadow{
-    -webkit-font-smoothing: antialiased;
-    background-clip: border-box;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px 0px, rgba(0, 0, 0, 0.137255) 0px 1px 1px 0px, rgba(0, 0, 0, 0.117647) 0px 2px 1px -1px;
+.boxShadow {
+  -webkit-font-smoothing: antialiased;
+  background-clip: border-box;
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 1px 3px 0px, rgba(0, 0, 0, 0.137255) 0px 1px 1px 0px, rgba(0, 0, 0, 0.117647) 0px 2px 1px -1px;
 }
 
-.boxShadow1{
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+.boxShadow1 {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 .boxShadow1:hover {
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-.transition{
-  -webkit-transition: all 0.2s ;
-          transition: all 0.2s ;
+.transition {
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .vertical-align {
@@ -100,180 +192,187 @@ html{
   transform: translateY(-50%);
 }
 
+
 /*------------ Header Styles ---------------*/
-header{
-	background: url("../images/headerImage.jpg") no-repeat transparent;
-    background-size: cover;
-    position: relative;
-		height: 225px;
-		box-sizing: border-box;
+
+header {
+  background: url("../images/headerImage.jpg") no-repeat transparent;
+  background-size: cover;
+  position: relative;
+  height: 225px;
+  box-sizing: border-box;
 }
 
-nav{
-	position: absolute;
-width: 100%;
-box-sizing: border-box;
-color: white;
-padding: 0px 80px;
-background-color: rgba(30,30,30,0.8);
-font-size: 1.1em;
+nav {
+  position: absolute;
+  width: 100%;
+  box-sizing: border-box;
+  color: white;
+  padding: 0px 80px;
+  background-color: rgba(30, 30, 30, 0.8);
+  font-size: 1.1em;
 }
 
-.mainMenu img{
-	/*padding: 12px 0px;*/
-	position: relative;
-	top: 8px;
-	margin-right: 20px;
+.mainMenu img {
+  /*padding: 12px 0px;*/
+  position: relative;
+  top: 8px;
+  margin-right: 20px;
 }
 
-nav div{
-	display: inline-block;
-}
-nav div:nth-child(1){
-	float: left;
+nav div {
+  display: inline-block;
 }
 
-nav div:nth-child(2){
-	float: right;
-	margin-left: auto;
-	padding: 12px 0px;
+nav div:nth-child(1) {
+  float: left;
 }
 
-.rightHeader span{
-	margin: 0 15px;
+nav div:nth-child(2) {
+  float: right;
+  margin-left: auto;
+  padding: 12px 0px;
 }
 
-.rightHeader span input{
-	width: 380px;
-	padding: 1px 5px;
-	background-color: #efefef;
-	border: 0px;
-    border-radius: 2px;
+.rightHeader span {
+  margin: 0 15px;
 }
 
-#logoContainer{
-	padding: 80px 80px 0;
-	color: white;
+.rightHeader span input {
+  width: 380px;
+  padding: 1px 5px;
+  background-color: #efefef;
+  border: 0px;
+  border-radius: 2px;
 }
 
-#logoContainer span{
-	vertical-align: top;font-size: 40px;
-	margin-left: 20px;
-	font-weight: 300;
-	position: relative;top: -5px;
+#logoContainer {
+  padding: 80px 80px 0;
+  color: white;
 }
 
-#logoContainer img{ 
-	display: inline-block;
+#logoContainer span {
+  vertical-align: top;
+  font-size: 40px;
+  margin-left: 20px;
+  font-weight: 300;
+  position: relative;
+  top: -5px;
 }
 
-#logoContainer .pageTitle{
-	display: inline-block;
-    vertical-align: top;
-    font-size: 40px;
-    margin-left: 20px;
-    font-weight: 300;
-		position: relative;top: -5px;
+#logoContainer img {
+  display: inline-block;
 }
 
-.contentContainer{
-	/*width: 100%;*/
-	max-width: 1800px;
-	box-sizing: border-box;
-	padding: 0px 80px;
-	/*font-size: 0px;*/
-	position: relative;
-	top: -57px;
+#logoContainer .pageTitle {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 40px;
+  margin-left: 20px;
+  font-weight: 300;
+  position: relative;
+  top: -5px;
 }
 
-.pageNav{
-	width: 20%;
-	/*height: 1000px;*/
-	display: inline-block;
-	margin-right: 3%;
-	vertical-align: top;
-	/*background-color: #333;*/
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
+.contentContainer {
+  /*width: 100%;*/
+  max-width: 1800px;
+  box-sizing: border-box;
+  padding: 0px 80px;
+  /*font-size: 0px;*/
+  position: relative;
+  top: -57px;
 }
 
-.pageNavTitle{
-	width: 100%;
-	background-color: #d81118;
-	color: white;
-	color: rgba(255,255,255,.9);
-	/*font-weight: 700;*/
-	font-size: 19px;
-	text-align: center;
-	padding: 15px 0 13px;
-	/*border-bottom: 1px solid rgba(255,255,255,.2);*/
-	box-sizing: border-box;
-	/*text-transform: uppercase;*/
-	position: relative;
-	height: 57px;
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
+.pageNav {
+  width: 20%;
+  /*height: 1000px;*/
+  display: inline-block;
+  margin-right: 3%;
+  vertical-align: top;
+  /*background-color: #333;*/
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
-.pageNav li{
-	list-style: none;
-	padding: 12px 15px;
-	/*margin: 0 10px;*/
-	border-top: 1px solid rgba(255,255,255,.1);
-	background-color: #333;
-	color: rgba(255,255,255,.74);
-	transition: all .2s ease-in-out;
+.pageNavTitle {
+  width: 100%;
+  background-color: #d81118;
+  color: white;
+  color: rgba(255, 255, 255, .9);
+  /*font-weight: 700;*/
+  font-size: 19px;
+  text-align: center;
+  padding: 15px 0 13px;
+  /*border-bottom: 1px solid rgba(255,255,255,.2);*/
+  box-sizing: border-box;
+  /*text-transform: uppercase;*/
+  position: relative;
+  height: 57px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
-.pageNav li:hover{
-	cursor: pointer;
-	background-color: #2b2b2b;
+.pageNav li {
+  list-style: none;
+  padding: 12px 15px;
+  /*margin: 0 10px;*/
+  border-top: 1px solid rgba(255, 255, 255, .1);
+  background-color: #333;
+  color: rgba(255, 255, 255, .74);
+  -webkit-transition: all .2s ease-in-out;
+          transition: all .2s ease-in-out;
 }
 
-.pageNav li img{
-	float: right;
+.pageNav li:hover {
+  cursor: pointer;
+  background-color: #2b2b2b;
 }
 
-.pageNav li.active{
-	background-color: #3b3b3b;
-	background-color: #2b2b2b;
-	/*color: #d81118;*/
-	color: white;
+.pageNav li img {
+  float: right;
 }
 
-.academicsContainer{
-	width: 76%;
-	/*height: 1000px;*/
-	background-color: white;
-	display: inline-block;
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
+.pageNav li.active {
+  background-color: #3b3b3b;
+  background-color: #2b2b2b;
+  /*color: #d81118;*/
+  color: white;
 }
 
-.academicsControls{
-	width: 100%;
-	padding: 13px 30px;
-	background-color: #d81118;
-	box-sizing: border-box;
-	height: 57px;
-	border-top-left-radius: 3px;
-	border-top-right-radius: 3px;
-	border-bottom-left-radius: 0px;
-	border-bottom-right-radius: 0px;
+.academicsContainer {
+  width: 76%;
+  /*height: 1000px;*/
+  background-color: white;
+  display: inline-block;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
-.filterBy{
-	color: rgba(255,255,255,.74);
-	text-transform: uppercase;
-	font-size: 13px;
-	margin-right: 15px;
-	font-weight: 700;
+.academicsControls {
+  width: 100%;
+  padding: 13px 30px;
+  background-color: #d81118;
+  box-sizing: border-box;
+  height: 57px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
-.academicsControls select{
-	display: inline-block;
+.filterBy {
+  color: rgba(255, 255, 255, .74);
+  text-transform: uppercase;
+  font-size: 13px;
+  margin-right: 15px;
+  font-weight: 700;
+}
+
+.academicsControls select {
+  display: inline-block;
   padding: 3px 15px;
   border: solid 3px white;
   /*box-shadow: inset 0px 1px 4px rgba(0, 0, 0, 1);*/
@@ -282,13 +381,13 @@ nav div:nth-child(2){
   /*-webkit-appearance:none;*/
   /*width: 213px;*/
   color: #333;
-	font-weight: 400;
+  font-weight: 400;
   -webkit-transition: .2s;
   transition: .2s;
   /*-webkit-appearance:none;*/
   background-color: lightgrey;
-	outline: none;
-	margin-right: 20px;
+  outline: none;
+  margin-right: 20px;
 }
 
 input {
@@ -312,7 +411,7 @@ input[type=search] {
   border: solid 3px white;
   padding: 5px 12px 5px 20px;
   width: auto;
-	/*max-width: 500px;*/
+  /*max-width: 500px;*/
   border-radius: 10em;
   -webkit-transition: .2s;
   transition: .2s;
@@ -334,7 +433,7 @@ select:focus {
 input[type=search]:hover,
 select:hover {
   background-color: #efefef;
-	cursor: pointer;
+  cursor: pointer;
 }
 
 input:-moz-placeholder {
@@ -345,142 +444,143 @@ input::-webkit-input-placeholder {
   color: grey;
 }
 
+
 /*.academicsControls select option{
 	text-transform: capitalize;
 }*/
 
-.academicsContent{
-	/*display: flex;
+.academicsContent {
+  /*display: flex;
 	flex-flow: row wrap;
 	justify-content: flex-start;*/
-	text-align:center;
-	padding: 35px 0;
-	font-size: 0px;
-	position: relative;
+  text-align: center;
+  padding: 35px 0;
+  font-size: 0px;
+  position: relative;
 }
 
-.academicsContent .tile{
-	width: 240px;
-	overflow: hidden;
-	/*margin: 25px 25px;*/
-	margin: 10px;
-	display: inline-block;
-	text-align: center;
-	/*position: absolute;
+.academicsContent .tile {
+  width: 240px;
+  overflow: hidden;
+  /*margin: 25px 25px;*/
+  margin: 10px;
+  display: inline-block;
+  text-align: center;
+  /*position: absolute;
 	top:0;*/
-	position: relative;
-	border-radius: 2px;
+  position: relative;
+  border-radius: 2px;
 }
 
-.tile img{
-	transition: all .3s;
+.tile img {
+  -webkit-transition: all .3s;
+          transition: all .3s;
 }
 
-.tile:hover img{
-	cursor: pointer;
-	-webkit-transform: scale(1.2);
-	transform: scale(1.2);
+.tile:hover img {
+  cursor: pointer;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+      transform: scale(1.2);
 }
 
-.tile .tileOverlay{
-	background-color: rgba(0,0,0,.5);
-	width: 240px;
-	height: 240px;
-	position: absolute;
-	top:0
+.tile .tileOverlay {
+  background-color: rgba(0, 0, 0, .5);
+  width: 240px;
+  height: 240px;
+  position: absolute;
+  top: 0
 }
 
-.tile .tileTitle{
-	/*width: 240px;
+.tile .tileTitle {
+  /*width: 240px;
 	height: 240px;*/
-	width: 100%;
-	position: absolute;
-	top: 0;
-	/*display: flex;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  /*display: flex;
 	align-items: center;
 	align-content: center;
 	text-align: center;*/
-	text-align: center;
-	margin-top: 100px;
-	transition: all .2s;
+  text-align: center;
+  margin-top: 100px;
+  -webkit-transition: all .2s;
+          transition: all .2s;
 }
 
-.tile .tileTitle span{
-	color: white;
-	font-size: 18px;
+.tile .tileTitle span {
+  color: white;
+  font-size: 18px;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: .2px;
   line-height: 1.4;
-	text-align: center;
+  text-align: center;
 }
 
-.tileTitle .viewMore{
-	font-size: 16px;
-	color: white;
-	background-color: rgba(216,17,24,1);
-	padding: 5px 7px;
-	width: 110px;
-	margin: 10px auto;
-	border-radius: 5px;
-	opacity: 0;
-	transition: all .2s;
+.tileTitle .viewMore {
+  font-size: 16px;
+  color: white;
+  background-color: rgba(216, 17, 24, 1);
+  padding: 5px 7px;
+  width: 110px;
+  margin: 10px auto;
+  border-radius: 5px;
+  opacity: 0;
+  -webkit-transition: all .2s;
+          transition: all .2s;
 }
 
 .tile:hover .tileTitle {
-	margin-top: 80px;
+  margin-top: 80px;
 }
 
-.tile:hover .tileTitle .viewMore{
-	opacity: 1;
+.tile:hover .tileTitle .viewMore {
+  opacity: 1;
 }
 
-.tileContent{
-	width: 100%;
-	height: 50px;
-	background-color: #efefef;
+.tileContent {
+  width: 100%;
+  height: 50px;
+  background-color: #efefef;
 }
 
-.threeRowContainer{
-	width: 76%;
-	/*height: 400px;*/
-	background-color: white;
-	margin-left: auto;	
-	margin-top: 50px;
-	margin-right: 1%;
-	text-align: center;
-	padding: 50px 25px;
-	box-sizing: border-box;
-	margin-bottom: 30px;
+.threeRowContainer {
+  width: 76%;
+  /*height: 400px;*/
+  background-color: white;
+  margin-left: auto;
+  margin-top: 50px;
+  margin-right: 1%;
+  text-align: center;
+  padding: 50px 25px;
+  box-sizing: border-box;
+  margin-bottom: 30px;
 }
 
-.threeRowContainer div{
-	width: 30%;
-	height: 200px;
-	background-color: #efefef;
-	display: inline-block;
-	margin: 0px 10px;
-	color: #d81118;
-	font-size: 18px;
-	padding-top: 20px;
+.threeRowContainer div {
+  width: 30%;
+  height: 200px;
+  background-color: #efefef;
+  display: inline-block;
+  margin: 0px 10px;
+  color: #d81118;
+  font-size: 18px;
+  padding-top: 20px;
 }
 
-footer{
-	background-color: #434140; 
-	width: 100%;
-	/*height: 80px;*/
-	font-size: 18px;
-	text-align: center;
-	color: rgba(255,255,255,.74);
-	padding: 30px 0 25px;
+footer {
+  background-color: #434140;
+  width: 100%;
+  /*height: 80px;*/
+  font-size: 18px;
+  text-align: center;
+  color: rgba(255, 255, 255, .74);
+  padding: 30px 0 25px;
 }
-
 
 @media only screen and (max-width: 1440px) {
-	
-	input[type=search]{
-		display: none;
-	}
-
-
+  input[type=search] {
+    display: none;
+  }
 }
